10-Test2/results.txt
test_p1 (__main__.Test.test_p1) ... ERROR
test_p10 (__main__.Test.test_p10) ... ok
test_p2 (__main__.Test.test_p2) ... ERROR
test_p3 (__main__.Test.test_p3) ... ok
test_p4 (__main__.Test.test_p4) ... ok
test_p5 (__main__.Test.test_p5) ... ERROR
test_p6 (__main__.Test.test_p6) ... ok
test_p7 (__main__.Test.test_p7) ... ok
test_p8 (__main__.Test.test_p8) ... ok
test_p9 (__main__.Test.test_p9) ... ok

======================================================================
ERROR: test_p1 (__main__.Test.test_p1)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "c:\Users\tomas\Desktop\test2\grade-test2-ZICSS1-1112.py", line 13, in test_p1
    import p1
  File "c:\Users\tomas\Desktop\test2\p1.py", line 2
    # Given a reverse polish notation expression return its value
                                                                 ^
IndentationError: expected an indented block after function definition on line 1

======================================================================
ERROR: test_p2 (__main__.Test.test_p2)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "c:\Users\tomas\Desktop\test2\grade-test2-ZICSS1-1112.py", line 19, in test_p2
    self.assertEqual(p2.f(1597),True)
                     ^^^^^^^^^^
  File "c:\Users\tomas\Desktop\test2\p2.py", line 18, in f
    fib_list.append(fib(i))
                    ^^^^^^
  File "c:\Users\tomas\Desktop\test2\p2.py", line 13, in fib
    return fib(n - 1) + fib(n)
                        ^^^^^^
  File "c:\Users\tomas\Desktop\test2\p2.py", line 13, in fib
    return fib(n - 1) + fib(n)
                        ^^^^^^
  File "c:\Users\tomas\Desktop\test2\p2.py", line 13, in fib
    return fib(n - 1) + fib(n)
                        ^^^^^^
  [Previous line repeated 984 more times]
RecursionError: maximum recursion depth exceeded

======================================================================
ERROR: test_p5 (__main__.Test.test_p5)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "c:\Users\tomas\Desktop\test2\grade-test2-ZICSS1-1112.py", line 37, in test_p5
    self.assertEqual(p5.f(cart, prices, 21),True)
                     ^^^^^^^^^^^^^^^^^^^^^^
  File "c:\Users\tomas\Desktop\test2\p5.py", line 7, in f
    total_price += prices[key] * cart[key]
                   ^^^^^^
NameError: name 'prices' is not defined

----------------------------------------------------------------------
Ran 10 tests in 0.017s

FAILED (errors=3)
